# postgres-to-databricks-cdc

./: .gitignore  README.md  cdc_load.py  databricks.yml  full_load.py  pipeline_main.py  pyproject.toml  secrets.toml.example
.claude/: CLAUDE.md
.gemini/: GEMINI.md
.gemini/dlt_lib_docs/: 01_dlt_fundamentals.md  02_source_postgres_cdc.md  03_destination_databricks.md  04_configuration_and_secrets.md  05_developer_guide_code_structure.md
.github/workflows/: deploy.yml
resources/jobs/: postgres_cdc_job.job.yml
scripts/: cleanup_databricks.py  inspect_table.py  list_volumes.py  simulate_transactions.py  verify_data.py
src/postgres_cdc/: cdc_load.py  full_load.py  pipeline_main.py
src/postgres_cdc/pg_replication/: helpers.py
src/postgres_cdc/utils/: logger.py
tests/: test_logger.py  test_pg_replication_helpers.py  test_pipeline_args.py
utils/: __init__.py  logger.py
