[project]
name = "postgres-to-databricks-cdc"
version = "0.1.0"
description = "PostgreSQL to Databricks CDC Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[databricks,postgres,sql-database]>=1.18.2",
    "typing-extensions>=4.11.0",
    "rich>=13.7.0",
]

[project.scripts]
# The entry point now points to the package structure
run_pipeline = "postgres_cdc.pipeline_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_cdc"]