[project]
name = "postgres-to-databricks-cdc"
version = "0.1.0"
description = "PostgreSQL to Databricks CDC Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dlt[databricks,postgres,sql-database]>=1.18.2",
    "typing-extensions>=4.11.0",
    "rich>=13.7.0",
]

[project.scripts]
run_pipeline = "postgres_cdc.pipeline_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_cdc"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
scripts_are_modules = true
disallow_untyped_defs = false # Set to true for strict checking later

[[tool.mypy.overrides]]
module = "pyspark.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dlt.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "postgres_cdc.pg_replication.helpers"
disallow_untyped_defs = false
check_untyped_defs = false
ignore_errors = true

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
    "types-psycopg2>=2.9.21.20251012",
]
